--- a/perfmon_logger/pubspec.yaml
+++ b/perfmon_logger/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   async: ^2.10.0
   backbone:
-    path: ../../backbone/
+    git:
+      url: https://github.com/sturdykeep/backbone.git
+      ref: main
   flutter:
     sdk: flutter
   web_socket_client: ^0.1.0-dev.2
